# Mud

./: .gitignore  LICENSE  Mud.sln  Package.nuspec  README.md
.github/workflows/: build.yml
Clib/: .gitignore  CMakeLists.txt  MudTest.c
Clib/include/: java-arg.h  mud.h
Clib/src/: memory-util.c  memory-util.h  mud.c
Mud/: ClassInfo.cs  JavaClass.cs  JavaException.cs  Jvm.cs  Mud.csproj  TypeGen.cs  TypeMap.cs
Mud.Generator/: MethodTypeSignature.cs  Mud.Generator.csproj  Parser.cs  Program.cs  ReflectParser.cs  Scanner.cs  SignatureParser.cs  TypeInfo.cs  TypeSignature.cs  Writer.cs
Mud.J6/: Class1.cs
Mud.J8/: Mud.J8.csproj
Mud.Playground/: Program.cs  jclass.cs
Mud.Test/: BaseTest.cs  Db2File.cs  JarBaseTest.cs  Mud.Test.csproj  Program.cs
Mud.Test/ApacheCommons/: ComplexTest.cs  Math.cs  SkewnessTest.cs  VectorialMeanTest.cs
Mud.Test/ApacheCommons/Interfaces/: IDescriptiveStatistics.cs
Mud.Test/Core/: BoundInterfaceTest.cs  ClassPath.cs  IntegerCls.cs  StaticCallTest.cs  StringBuilder.cs
Mud.Test/Core/Interfaces/: IInteger.cs  IMath.cs  IStringBuilder.cs
Mud/Clib/: CMakeLists.txt  MudTest.c
Mud/Clib/include/: java-arg.h  mud.h
Mud/Clib/src/: memory-util.h  mud.c  signature_parse.c  signature_parse.h
Mud/Exceptions/: ClassNotFoundException.cs  CustomTypeArgException.cs  InstanceMemberOnStaticException.cs  InvalidBoundObjectException.cs  JavaException.cs  JavaLocateException.cs  JvmNotInitializedException.cs  MemberNotFoundException.cs  MethodNotFoundException.cs  NoClassMappingException.cs
Mud/Types/: BoundObject.cs  IBoundObject.cs  Java.cs  JavaArg.cs  JavaObject.cs  JavaString.cs  JavaType.cs  JavaVal.cs
